# self-introduction

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile
apps/api/alembic/: env.py
apps/api/tests/: test_api.py  test_db_repository.py  test_embedding.py  test_eval_llm.py  (+7 more)
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json
deploy/production/: docker-compose.yml  nginx-self-ip.conf
docs/: PRD.md  architecture.md  m1-spike-report.md  m3.2-pgvector-report.md  m3.3-embedding-report.md  m3.4-semantic-eval-report.md  m3.5-query-understanding-report.md  m4-web-mvp-report.md  m4.2-llm-answer-generator-report.md  m5-question-set.md  m5.2-llm-eval-report.md  m5.3-query-quality-report.md  m5.4-observability-report.md  project-plan.md  technology-selection.md
evals/: README.md
evals/results/: README.md
knowledge/: README.md
spikes/: README.md
spikes/m1_embedding/: README.md  __init__.py  requirements.txt  run.py
spikes/m1_ingestion/: README.md  __init__.py  chunker.py  cli.py  frontmatter.py  loader.py  markdown.py  models.py  retrieval.py
spikes/m1_llm/: README.md  __init__.py  context.py  contracts.py  dataset.py  evaluate.py  fake_provider.py  prompt.py  requirements.txt  run.py
spikes/m1_pgvector/: README.md  __init__.py  requirements.txt  run.py  schema.sql  utils.py
spikes/m1_sse/: README.md  __init__.py  app.py  browser_client.html  events.py  fetch_client.mjs
(+70 files in other folders)
