[project]
name = "self-introduction"
version = "0.1.0"
description = "Personal portfolio RAG assistant."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.122.1",
    "httpx>=0.28.1",
    "markdown-it-py>=4.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-frontmatter>=1.1.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["apps/api/src"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "apps/api/src"
packages = ["self_intro_api"]

[tool.alembic]
script_location = "apps/api/alembic"
